--- a/MvcPet/MvcPet/Web.config
+++ b/MvcPet/MvcPet/Web.config
@@ -5,13 +5,12 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-MvcPet-20140316020945.mdf;Initial Catalog=aspnet-MvcPet-20140316020945;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="PetDBContext" connectionString="benton.uofl-cis411.com;Database=Pet;User Id=doge;Password=34kannon34;" providerName="System.Data.SqlClient" />
-
+    <add name="PetDBContext" connectionString="Server=benton.uofl-cis411.com;database=pet2014;User Id=doge;Password=34kannon34;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
